--- a/src/pages/setting/userApplication/return/return.html
+++ b/src/pages/setting/userApplication/return/return.html
@@ -1,53 +1,41 @@
-<ion-view view-title="返回" class="myInfo indexPage">
+<ion-view view-title="返回" class="myInfo indexPage return">
   <ion-header-bar class="head-bg">
     <button class="button button-icon icon ion-ios-arrow-left" ng-click="goBack()"></button>
     <div class="title titleStyle">
       返回
     </div>
-    <button class="button button-clear button-positive" style="font-size: 14px;color: black;" ng-click="submit()">保存</button>
   </ion-header-bar>
-  <ion-content class="content-style" delegate-handle="mainScroll">
+  <ion-content class="content-style contentPadding" delegate-handle="mainScroll">
     <div class="list">
-
-      <div class="item item-divider" style="border-top: 0px">
-        返回给
+      <div class="item item-divider">
+        返回给 <span class="selectClickTip">（请点击选择）</span>
       </div>
-      <ion-radio ng-repeat="item in clientSideList"
+      <div style="padding:0 15px;background: #FFFFFF"><div class="" style="height: 1px;width: 100%;background: #EFEFEF"></div></div>
+      <ion-radio ng-repeat="item in clientSideList" style="margin: 0"
                  ng-value="item.value"
                  ng-model="data.clientSide">
         <div class="row row-no-padding">
           <div class="col">{{ item.text }}</div>
         </div>
       </ion-radio>
+
       <div class="item item-divider">
         实际归属地
       </div>
-      <label class="item item-input item-select">
-        <div class="input-label">
-          请选择
-        </div>
-        <select ng-model="data.province" ng-change="selectProvince(data.province)">
-          <option ng-repeat="item in data.listProvince" value="{{item}}">{{item.name}}</option>
-        </select>
-      </label>
-      <label class="item item-input item-select">
-        <div class="input-label">
-          <!--Lightsaber-->&nbsp;
-        </div>
-        <select ng-model="data.city">
-          <option ng-repeat="item in data.listCity">{{item}}</option>
-        </select>
+      <div style="padding:0 15px;background: #FFFFFF"><div class="" style="height: 1px;width: 100%;background: #EFEFEF"></div></div>
+      <label class="item item-input item-icon-right" style="background: #FFFFFF;margin-top: 0">
+        <ul  input-treelist ng-model="data.address" labels="省,市" select-data="data.addressData" option-text="text" option-value="value" option-child="children"></ul>
+        <i  class="icon ion-ios-arrow-forward" style="color: #444444;border-radius: 2px;font-size: 20px"></i>
       </label>
       <div class="item item-divider">
         返回缘由
       </div>
-      <div class="item">
-        <textarea rows="3" cols="20" style="background-color:#eee;padding:5px;width: 100%" ng-model="data.text">
+      <div class="item" style="padding-top: 0">
+        <textarea rows="3" cols="20" style=""  ng-model="data.text">
         </textarea>
-      </div>
-      <div class="item">
       </div>
 
     </div>
   </ion-content>
+  <div class="buttonSub"><button class="login-btn" type="button" ng-click="submit()">保存</button></div>
 </ion-view>
