--- a/src/pages/indexPage/indexPage.html
+++ b/src/pages/indexPage/indexPage.html
@@ -15,7 +15,7 @@
     </ion-refresher>
 
     <div class="global-container">
-      <div class="statistics-time" >
+      <div class="statistics-time">
         统计自{{newViewData.day_time.start_time}}至{{newViewData.day_time.end_time}}
       </div>
       <div class="new-data-statistics">
@@ -75,7 +75,8 @@
             <div class="rank-num">
               <span class="spanNum" ng-if="$index > 2">{{$index+1}}</span>
             </div>
-            <img ng-src="{{item.avatar}}" class="head"/>
+            <img ng-src="{{item.avatar}}" class="head" ng-if="item.avatar"/>
+            <img src="build/assets/img/indexPage/admin.jpg" ng-if="!item.avatar" class="head"/>
             <div class="person-info">
               <div class="top">
                 <span class="name" ng-bind="item.user_name"></span>
@@ -110,7 +111,8 @@
             <div class="rank-num">
               <span class="spanNum numFontFamily" ng-if="$index > 2">{{$index+1}}</span>
             </div>
-            <img ng-src="{{item.avatar}}" class="head"/>
+            <img ng-src="{{item.avatar}}" class="head" ng-if="item.avatar"/>
+            <img src="build/assets/img/indexPage/admin.jpg" ng-if="!item.avatar" class="head"/>
             <div class="person-info">
               <div class="top">
                 <span class="name" ng-bind="item.user_name"></span>
@@ -125,7 +127,8 @@
             </div>
             <div class="auto-height"></div>
           </div>
-          <a href="javascript:void(0)" class="view-all-btn" ng-show="newViewData.leading_ranking_company.leading_list.length>10"
+          <a href="javascript:void(0)" class="view-all-btn"
+             ng-show="newViewData.leading_ranking_company.leading_list.length>10"
              ng-click="showPartOrAll('leading_ranking_company')">
             {{config.status.leading_ranking_company?'收起':'查看全部'}}
           </a>
@@ -137,9 +140,17 @@
            ng-if="newViewData.user_ranking_company && newViewData.user_ranking_company.user_count != 0">
         <div class="rank-title">
           <div class="left company">个人排行榜-公司</div>
-          <div class="people-num" style="display:none;">{{newViewData.personal_ranking_team.user_count ||
+          <div class="people-num" style="display:none;" ng-if="false">{{newViewData.personal_ranking_team.user_count ||
             0}}&nbsp;位组员<img
               src="build/assets/img/indexPage/icon_spread.png"/></div>
+          <div class="people-num register" ng-if="config.is_admin == '1'">
+              <select  ng-model="data.filterSelect" ng-change="selectFilterSelect(data.filterSelect)" style="border: 0;background: white">
+                <option value="{{item.value}}" ng-repeat="item in data.selectList">{{item.desc}}</option>
+              </select>
+            <!--<i class="ion-ios-arrow-down" style="margin-left: -4px"></i>-->
+            <!--<img-->
+              <!--src="build/assets/img/indexPage/icon_spread.png"/>-->
+          </div>
           <div class="auto-height"></div>
         </div>
         <div class="rank-list">
@@ -147,7 +158,8 @@
             <div class="rank-num">
               <span class="spanNum numFontFamily" ng-if="$index > 2">{{$index+1}}</span>
             </div>
-            <img ng-src="{{item.avatar}}" class="head"/>
+            <img ng-src="{{item.avatar}}" class="head" ng-if="item.avatar"/>
+            <img src="build/assets/img/indexPage/admin.jpg" ng-if="!item.avatar" class="head"/>
             <div class="person-info">
               <div class="top">
                 <span class="name" ng-bind="item.user_name"></span>
@@ -161,8 +173,10 @@
             </div>
             <div class="auto-height"></div>
           </div>
-          <a href="javascript:void(0)" class="view-all-btn" ng-show="newViewData.user_ranking_company.user_list.length>10" ng-click="showPartOrAll('user_ranking_company')">
-          {{config.status.user_ranking_company?'收起':'查看全部'}}
+          <a href="javascript:void(0)" class="view-all-btn"
+             ng-show="newViewData.user_ranking_company.user_list.length>10"
+             ng-click="showPartOrAll('user_ranking_company')">
+            {{config.status.user_ranking_company?'收起':'查看全部'}}
           </a>
         </div>
       </div>
