--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -1,4 +1,4 @@
-<ion-view view-title="首页" class="myInfo indexPage agentInfo setting">
+<ion-view view-title="首页" class="myInfo  agentInfo setting">
   <ion-header-bar class="head-bg">
     <div class="title titleStyle">
       个人中心
@@ -15,48 +15,55 @@
       on-refresh="doRefresh()">
     </ion-refresher>
     <div class="global-container">
-      <ion-list>
-        <ion-item class="item item-icon-right" style="border-top: 0px">
-          <div class="row row-wrap ">
-            <div class="col col-25">
-              <img ng-src="{{data.userInfo.user.avatar}}" ng-if="data.userInfo.user.avatar">
-              <img src="build/assets/img/login/product_logo.png" ng-if="!data.userInfo.user.avatar">
-            </div>
-            <div class="col col-75">
-              <div class="row" class="userInfo"><span class="username">{{data.userInfo.user.user_name}}</span>
-                &nbsp;&nbsp;&nbsp;&nbsp;<span class="position">{{data.userInfo.user.work_position}}</span></div>
-              <div class="row companyName">{{data.userInfo.user.name}}</div>
-            </div>
+      <div class="itemDiv">
+        <div class="row row-wrap rowStyle">
+          <div class="col col-25">
+            <img ng-src="{{data.userInfo.user.avatar}}" ng-if="data.userInfo.user.avatar">
+            <img src="build/assets/img/login/product_logo.png" ng-if="!data.userInfo.user.avatar">
           </div>
-          <!--<i class="icon ion-ios-arrow-right"></i>-->
-        </ion-item>
-        <ion-item style="height: 240px">
-          <span class="bigTitleSp">我的任务</span>
-          <div class="row row-wrap">
-            <div class="col col-25" ng-click="userApplication()">
-              <ul>
-                <li>
-                  <img src="build/assets/img/setting/userApplication.png">
-                  <p>用户申请</p>
-                  <span class="badge badge-assertive hongDian" ng-if="settingNum.applicationNum">{{settingNum.applicationNum}}</span>
-                </li>
-              </ul>
-            </div>
+          <div class="col col-75">
+            <div class="row" class="userInfo"><span class="username">{{data.userInfo.user.user_name}}</span></div>
+            <div class="row lineOther"><span class="position">{{data.userInfo.user.work_position}}</span>&nbsp;&nbsp;|&nbsp;&nbsp;<span class="companyName">{{data.userInfo.user.name}}</span></div>
           </div>
-        </ion-item>
-        <ion-item class="text-left item item-icon-right bigTitle">
-          我的资源（即将上线，敬请期待）
-        </ion-item>
-        <ion-item class="text-left  item item-icon-right bigTitle" ng-click="goChangePassword()">
-          修改密码<i class="icon ion-ios-arrow-right"></i>
-        </ion-item>
-        <ion-item class="text-left item item-icon-right bigTitle" ng-click="versionDetection()">
-          版本检测
-        </ion-item>
-        <ion-item class="text-left item item-icon-right bigTitle" ng-click="exitAccount()">
-          退出登录
-        </ion-item>
-      </ion-list>
+        </div>
+      </div>
+      <div class="itemDiv">
+        <div class="lineStyle"></div>
+        <div class="bigTitleSp">我的任务</div>
+        <div class="row row-wrap rowStyleSp">
+          <div class="col col-25" ng-click="userApplication()">
+            <ul>
+              <li>
+                <img src="build/assets/img/setting/userApplication.png">
+                <p>用户申请</p>
+                <span class="badge badge-assertive hongDian" ng-if="settingNum.applicationNum">{{settingNum.applicationNum}}</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="listStyle">
+        <ion-list >
+          <ion-item class="text-left item item-icon-right bigTitle" style="border-top: 0">
+            <img src="build/assets/img/setting/myAny.png" class="iconImg"><span class='iconFont'>我的资源</span>
+            （即将上线，敬请期待）
+          </ion-item>
+          <ion-item class="text-left  item item-icon-right bigTitle" ng-click="goChangePassword()">
+            <img src="build/assets/img/setting/updatePassword.png" class="iconImg"><span class='iconFont'>修改密码</span>
+            <i class="icon ion-ios-arrow-right"></i>
+          </ion-item>
+          <ion-item class="text-left item item-icon-right bigTitle" ng-click="versionDetection()"  style="border-bottom: 0">
+            <img src="build/assets/img/setting/banben.png" class="iconImg"><span class='iconFont'>版本检测</span>
+          </ion-item>
+        </ion-list>
+        <div class="listStyle">
+          <ion-list >
+            <ion-item class="text-left item item-icon-right bigTitle" ng-click="exitAccount()" style="border-top: 0;border-bottom: 0">
+              <img src="build/assets/img/setting/outLogin.png" class="iconImg"><span class='iconFont'>退出登录</span>
+            </ion-item>
+          </ion-list>
+        </div>
+      </div>
     </div>
   </ion-content>
 </ion-view>
