--- a/src/pages/setting/userApplication/distribution/distribution.html
+++ b/src/pages/setting/userApplication/distribution/distribution.html
@@ -1,36 +1,47 @@
 <ion-view view-title="分派" class="myInfo indexPage distribution">
-  <ion-header-bar class="head-bg">
+  <ion-header-bar class="head-bg" ng-if="config.showInput">
     <button class="button button-icon icon ion-ios-arrow-left" ng-click="goBack()"></button>
     <div class="title titleStyle">
       分派
     </div>
-    <button class="button button-clear button-positive" style="font-size: 14px;color: black;" ng-click="submit()">保存</button>
   </ion-header-bar>
-  <ion-content class="content-style" delegate-handle="mainScroll">
+  <ion-header-bar class="head-bg item-input-inset" ng-if="!config.showInput">
+    <button class="button button-icon icon ion-ios-arrow-left" ng-click="goCancle()"></button>
+    <label class="item-input-wrapper" style="background: white">
+      <i class="icon ion-ios-search placeholder-icon"></i>
+      <input type="search" placeholder="请正确输入培训师姓名" ng-model="data.selectName">
+    </label>
+    <button class="button button-clear button-positive" ng-click="selectInfo()"
+            style="font-family: PingFangSC-Light;font-size: 17px;color: #030303;letter-spacing: -0.41px;text-align: right;">
+      搜索
+    </button>
+  </ion-header-bar>
+  <ion-content class="content-style contentPadding" delegate-handle="mainScroll" style="margin-top: 64px">
     <div class="list">
-      <div class="item item-input-inset" style="border-top: 0px">
-        <label class="item-input-wrapper">
-          <input type="text" placeholder="请正确输入培训师姓名" ng-model="data.selectName">
+      <div class="item item-input-inset" style="border-top: 0px;background:#f5f5f5;padding: 0;margin: 10px 0 0 0 "
+           ng-click="changeHead()">
+        <label class="item-input-wrapper" style="background: #E8E8E8;border-radius: 4px;height: 30px"
+               ng-if="config.showInput">
+          <i class="icon ion-ios-search placeholder-icon"></i>
+          <span
+            style="font-family: PingFangSC-Light;font-size: 14px;color: #AAAAAA;letter-spacing: -0.15px;">请正确输入培训师姓名</span>
         </label>
-        <button class="button button-small" ng-click="selectInfo()">
-          查询
-        </button>
       </div>
       <div class="item text-center" ng-if="clientSideList.length < 1">
         暂无数据
       </div>
-
       <ion-radio ng-repeat="item in clientSideList"
                  ng-value="item.u_id"
                  ng-model="data.clientSide" ng-if="clientSideList.length > 0">
         <div class="row row-no-padding">
-          <div class="col">{{ item.user_name }}</div>
-          <div class="col">{{item.mobile_phone}}</div>
+          <div class="col userName">{{ item.user_name }}</div>
+          <div class="col phone">{{item.mobile_phone}}</div>
         </div>
       </ion-radio>
       <div class="styleTips">
-        温馨提示：只能分派给管辖该区域的我的下级人员，如需跨区域分派，请由区域负责人进行调换
+        <i class="ion-ios-information-outline"></i>温馨提示：只能分派给管辖该区域的我的下级人员，如需跨区域分派，请由区域负责人进行调换
       </div>
     </div>
   </ion-content>
+  <div class="buttonSub"><button class="login-btn" type="button" ng-click="submit()">保存</button></div>
 </ion-view>
