--- a/src/pages/setting/userApplication/return/return.html
+++ b/src/pages/setting/userApplication/return/return.html
@@ -31,7 +31,7 @@
         返回缘由
       </div>
       <div class="item" style="padding-top: 0">
-        <textarea rows="3" cols="20" style=""  ng-model="data.text">
+        <textarea rows="3" cols="20" style="background-color:#eee;padding:5px;width: 100%" placeholder="最多输入300个汉字"  ng-model="data.text">
         </textarea>
       </div>
 
