--- a/www/index.html
+++ b/www/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="format-detection" content="telephone=no">
   <meta http-equiv="Content-Security-Policy"
-        content="default-src *;style-src 'self' 'unsafe-inline';script-src http://localhost:8080 http://192.168.1.119:8100 http://school-test.xiaoheiban.cn 'unsafe-inline' 'self' 'unsafe-eval'">
+        content="default-src *;style-src 'self' 'unsafe-inline';script-src http://localhost:8080 http://192.168.1.119:8100 http://yt.xiaoheiban.cn 'unsafe-inline' 'self' 'unsafe-eval'">
   <meta name="viewport"
-        content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width，viewport-fit=cover">
+        content="initial-scale=1, width=device-width, height=device-height, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
   <title></title>
   <link href="build/lib/ionic/release/css/ionic.min.css" rel="stylesheet">
   <link href="build/css/app.core.css" rel="stylesheet">
