--- a/src/pages/login/smsVerification/smsVerification.html
+++ b/src/pages/login/smsVerification/smsVerification.html
@@ -11,12 +11,14 @@
       <div class="tips">提示：检测到您已更换登录设备，请输入短信验证码校验账户安全！</div>
       <div class="text-center phone">手机号码：{{data.mobile}}</div>
       <div class="divInput"><input class="inputStyle" placeholder="验证码" ng-model="data.code">
-        <button class="" type="button" ng-click="getTestCode()"
-                ng-class="{'buttonCode':!canClick,'buttonCodeSp':canClick}"
-                ng-bind="description" ng-disabled="canClick">
+        <button  type="button" ng-click="onClick()" class="buttonCode"
+                ng-bind="description" ng-if="!canClick">
+        </button>
+        <button  type="button" class="buttonCodeSp"
+                ng-bind="description" ng-if="canClick">
         </button>
       </div>
-      <button class="login-btn" type="button" ng-click="login()">登录</button>
+      <button class="login-btn" type="button" style="margin-top: 50px" ng-click="login()">登录</button>
     </div>
   </ion-content>
 </ion-view>
