--- a/src/pages/setting/userApplication/distribution/distribution.html
+++ b/src/pages/setting/userApplication/distribution/distribution.html
@@ -16,7 +16,7 @@
       搜索
     </button>
   </ion-header-bar>
-  <ion-content class="content-style contentPadding" delegate-handle="mainScroll" style="margin-top: 64px">
+  <ion-content class="content-style contentPadding contentMargin" delegate-handle="mainScroll">
     <div class="list">
       <div class="item item-input-inset" style="border-top: 0px;background:#f5f5f5;padding: 0;margin: 10px 0 0 0 "
            ng-click="changeHead()">
